# grid_filter

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  filter_obs.py  filter_obs.sh  pyproject.toml  requirements.txt  setup.cfg
cmake/Modules/: grid_filter-import.cmake
examples/: CMakeLists.txt  README.md  filter_obs.py  filter_obs.sh  filter_obs_cheyenne.pbs  grid_filter.py  kd2_node.cpp  kd2_small.cpp  kdtree_bfs.cpp  kdtree_bfs.py  plot_grid_data.py  plot_lam_domain.py  plot_obs.py  plot_random_data.py  plot_random_nearest.py  print_kdtree.py  sum_of_squares.py
include/: build_tree.h  kdtree.h  kdtree_node.h  kdtree_util.h  lam_domain_filter.h  mpas_file.h  mpas_grid.h  mpas_util.h  obs_util.h
python/: README.md
python/grid_filter/: __init__.py  graph_data.py  grid_util.py  kdnode.py  kdtree.py  kdtree_util.py  lam_domain_filter.py  mpas_grid.py  obs_data.py  obs_mask.py  read_regional_data.py  regional_data.py
python/grid_perimeter/: __init__.py  graph_data.py  grid_util.py  kdtree.py  mpas_grid.py  read_regional_data.py
python/visualization/: kdtree_display.py  plot_grid.py  plot_obs.py
scripts/: plot_grid_data.py
src/: CMakeLists.txt  README.md  build_tree.cpp  grid_filter.cpp  kdtree.cpp  kdtree_node.cpp  kdtree_util.cpp  lam_domain_filter.cpp  lib.rs  mpas_file.cpp  mpas_grid.cpp  mpas_util.cpp  myh5dump.cpp  myncdump.cpp  obs_util.cpp  sum_of_squares.rs
src/grid_filter/: CMakeLists.txt  grid_filter.cpp
test/: CMakeLists.txt  CTestPythonUnittests.cmake  test_graph_data.py  test_grid_perimeter.py  test_kdtree.cpp  test_kdtree.py  test_kdtree_node2d.cpp  test_kdtree_regional.cpp  test_kdtree_regional.py  test_kdtree_util.cpp  test_maponly.py  test_mpas_file.cpp  test_mpas_grid.cpp  test_mpas_util.cpp  test_mpasgrid.py  test_obs_data.cpp
test/python_tests/: test_filter_obs_mask.py  test_graph_data.py  test_grid_perimeter.py  test_kdtree.py  test_kdtree_display.py  test_kdtree_regional.py  test_kdtree_validation.py  test_maponly.py  test_mpasgrid.py  test_obs_data.py  test_obs_data_mp.py
tests/: test_sum_of_squares.rs
tests/python_tests/: Manitowoc.static.nc  test_kdtree_display.py  test_kdtree_regional.py
