[build-system]
#requires = ["maturin>=0.14,<0.15"]
#build-backend = "maturin"
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid_filter"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

#[tool.maturin]
#python-source = "python"
#features = ["pyo3/extension-module"]
